# Pingu

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.functional-tests.json
scripts/: check-generated-config.sh  debug-proxy-prepare.sh  debug-proxy-start.sh  routing_case_matrix.py  tauri-cli.mjs  test-routing.py  verify-routing.sh
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: functional_chain_generated_tests.rs  lib.rs  main.rs  proxy_runtime.rs  tray.rs
src-tauri/src/commands/: config.rs  host_overrides.rs  mod.rs  proxy.rs  rules.rs  settings.rs  traffic.rs
src-tauri/src/singbox/: config_gen.rs  mod.rs  process.rs  uri_parser.rs
src-tauri/src/storage/: app_config.rs  byted_internal.rs  host_overrides.rs  mod.rs
src-tauri/src/system/: mod.rs  proxy_macos.rs
src/components/: LangSwitch.tsx  Sidebar.tsx  Tooltip.tsx
src/components/home/: ConnectionHero.tsx  CurrentNodeCard.tsx  (+3 more)
src/hooks/: useHomeConnection.ts  useHostOverridesPageModel.ts  useI18nRerender.ts  useLogsPageModel.ts  useNodesPageModel.ts  useRulesPageModel.ts
src/lib/: api.ts  connection-api.ts  connection-store.ts  host-overrides-api.ts  i18n.ts  logs-api.ts  nodes-api.ts  proxy-api.ts  rules-api.ts  settings-api.ts  tauri-invoke.ts  traffic-api.ts  types.ts
src/pages/: Home.tsx  HostOverrides.tsx  Logs.tsx  Nodes.tsx  Rules.tsx  Settings.tsx
src/styles/: globals.css
testing/: atoms.yaml  chains.yaml
tests/: functional-chain.test.ts  node-shims.d.ts
tests/support/: rustInvokeHarness.ts
(+8 files in other folders)
