[package]
name = "pingu"
version = "0.1.0"
edition = "2021"
default-run = "pingu"

[lib]
name = "pingu_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
percent-encoding = "2"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["process", "sync"] }
dirs = "5"
chrono = "0.4"
tauri-plugin-autostart = "2"
ureq = { version = "2", features = ["json"] }
